--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "randomID",
+  "name": "random-id",
   "version": "0.0.0",
   "description": "Generates a random String with options.",
   "license": "MIT",
